--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,5 @@ features = [
   #"ogg",
 ]
 
-[target.x86_64-pc-windows-gnu]
-linker = "x86_64-w64-mingw32-gcc"
-ar = "x86_64-w64-mingw32-gcc-ar"
+[toolchain]
+channel = "nightly"
