--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -79,17 +79,15 @@ jobs:
           cp target/x86_64-unknown-linux-gnu/release/${{ env.binary }} linux/
           cp -r assets linux/
       - name: Package as a zip
-        uses: vimtor/action-zip@v1
-        with:
-          files: linux
-          dest: ${{ env.binary }}.zip
+        run: |
+          tar -zcvf ${{ env.binary }}.tar.gz linux
 
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ${{ env.binary }}.zip
-          asset_name: ${{ env.binary }}-linux.zip
+          file: ${{ env.binary }}.tar.gz
+          asset_name: ${{ env.binary }}-linux.tar.gz
           tag: ${{ github.ref }}
           overwrite: true
 
@@ -160,16 +158,14 @@ jobs:
           cp -r assets macintel
 
       - name: Package as a zip
-        uses: vimtor/action-zip@v1
-        with:
-          files: macintel
-          dest: ${{ env.binary }}.zip
+        run: |
+          tar -zcvf ${{ env.binary }}.tar.gz macintel
 
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ${{ env.binary }}.zip
-          asset_name: ${{ env.binary }}-macos.zip
+          file: ${{ env.binary }}.tar.gz
+          asset_name: ${{ env.binary }}-macos.tar.gz
           tag: ${{ github.ref }}
           overwrite: true
