--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -169,3 +169,44 @@ jobs:
           asset_name: ${{ env.binary }}-macos.tar.gz
           tag: ${{ github.ref }}
           overwrite: true
+
+  # Build for macOS M1
+  release-macos-m1:
+    runs-on: macOS-latest
+
+    steps:
+      - uses: little-core-labs/get-git-tag@v3.0.1
+        id: get_version
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+          target: aarch64-apple-darwin
+          override: true
+      - name: Environment Setup
+        run: |
+          export CFLAGS="-fno-stack-check"
+          export MACOSX_DEPLOYMENT_TARGET="10.9"
+
+      - name: Build
+        run: |
+          cargo build --release --target aarch64-apple-darwin
+
+      - name: Prepare Package
+        run: |
+          mkdir -p macsilicon
+          cp target/aarch64-apple-darwin/release/${{ env.binary }} macsilicon
+          cp -r assets macsilicon
+
+      - name: Package as a zip
+        run: |
+          tar -zcvf ${{ env.binary }}.tar.gz macsilicon
+
+      - name: Upload binaries to release
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: ${{ env.binary }}.tar.gz
+          asset_name: ${{ env.binary }}-macos-m1.tar.gz
+          tag: ${{ github.ref }}
+          overwrite: true
